--- a/index.html
+++ b/index.html
@@ -15,18 +15,16 @@
 <body>
     <!--Шапка-->
     <header>
-        <div class="container">
-            <nav>
-                <a href="/" class="logo"><span class="logo-accent">Web</span>Studio</a>
-                <ul class="site-nav list">
-                    <li><a href="./index.html" class="link current">Студия</a></li>
-                    <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-                    <li><a href="" class="link">Контакты</a></li>
-                </ul>
-            </nav>
-            <ul class="contacts list">
-                <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+        <div class="container header-container">
+            <a href="/" class="logo "><span class="logo-accent">Web</span>Studio</a>
+             <ul class="site-nav list ">
+                    <li class="item"><a href="./index.html" class="link current">Студия</a></li>
+                    <li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
+                    <li class="item"><a href="" class="link">Контакты</a></li>
+            </ul>
+             <ul class="contacts list ">
+                <li class="item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+                <li class="item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
             </ul>
         </div>        
     </header>
