--- a/portfolio.html
+++ b/portfolio.html
@@ -15,13 +15,15 @@
 <body>
     <!--Шапка-->
     <header>
-        <div class="container header-container">            
+        <div class="container header-container">  
+            <nav class="nav-flex">
                 <a href="/" class="logo"><span class="logo-accent">Web</span>Studio</a>
                 <ul class="site-nav list">
                     <li class="item"><a href="./index.html" class="link ">Студия</a></li>
                     <li class="item"><a href="./portfolio.html" class="link current">Портфолио</a></li>
                     <li class="item"><a href="" class="link">Контакты</a></li>
-                </ul>            
+                </ul> 
+            </nav>               
             <ul class="contacts list">
                 <li class="item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
                 <li class="item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
