--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
             <div class="container">
                 <h2 class="section-title">Преимущества</h2>
                 <ul class="advantages list">
-                    <li>
+                    <li class="item">
                         <h3 class="title">Внимание к деталям</h3>
                         <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
-                    <li>
+                    <li class="item">
                         <h3 class="title">Пунктуальность</h3>
                         <p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
-                    <li>
+                    <li class="item">
                         <h3 class="title">Планирование</h3>
                         <p class="text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
-                    <li>
+                    <li class="item">
                         <h3 class="title">Современные технологии</h3>
                         <p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
@@ -65,11 +65,11 @@
         <!--Чем мы занимаемся-->
         <section class="section">
             <div class="container">
-                <h2 class="whatwedo section-title">Чем мы занимаемся</h2>
-                <ul class="list">
-                    <li><img src="./images/development.jpg" alt="Разработка" width="370" height="294"></li>
-                    <li><img src="./images/optimization.jpg" alt="Оптимизация" width="370" height="294"></li>
-                    <li><img src="./images/design.jpg" alt="Дизайн" width="370" height="294"></li>
+                <h2 class=" section-title">Чем мы занимаемся</h2>
+                <ul class="whatwedo list">
+                    <li class="item"><img src="./images/development.jpg" alt="Разработка" width="370" height="294"></li>
+                    <li class="item"><img src="./images/optimization.jpg" alt="Оптимизация" width="370" height="294"></li>
+                    <li class="item"><img src="./images/design.jpg" alt="Дизайн" width="370" height="294"></li>
                 </ul>
             </div>            
         </section>
@@ -78,22 +78,22 @@
             <div class="container">
                 <h2 class="section-title">Наша команда</h2>
                 <ul class="team list">
-                    <li>
+                    <li class="item">
                         <img class="image" src="./images/productdesigner.jpg" alt="Игорь Демьяненко" width="270" height="260">
                         <h3 class="team-title">Игорь Демьяненко</h3>
                         <p class="text">Product Designer</p>
                     </li>
-                    <li>
+                    <li class="item">
                         <img class="image" src="./images/frontenddeveloper.jpg" alt="Ольга Репина" width="270" height="260">
                         <h3 class="team-title">Ольга Репина</h3>
                         <p class="text">Frontend Developer</p>
                     </li>
-                    <li>
+                    <li class="item">
                         <img class="image" src="./images/marketing.jpg" alt="Николай Тарасов" width="270" height="260">
                         <h3 class="team-title">Николай Тарасов</h3>
                         <p class="text">Marketing</p>
                     </li>
-                    <li>
+                    <li class="item">
                         <img class="image" src="./images/uidesigner.jpg" alt="Михаил Ермаков" width="270" height="260">
                         <h3 class="team-title">Михаил Ермаков</h3>
                         <p class="text">UI Designer</p>
