flex для Портфолио страницы

--- a/portfolio.html
+++ b/portfolio.html
@@ -33,91 +33,96 @@
     <main>
         <!--Фильтр-->
         <section class="section">
-            <h1 class="section-title">Примеры работ</h1>
-            <ul class="filter list">
-                <li><button type="button" class="button" >Все</button></li>
-                <li><button type="button" class="button" >Веб-сайты</button></li>
-                <li><button type="button" class="button" >Приложения</button></li>
-                <li><button type="button" class="button" >Дизайн</button></li>
-                <li><button type="button" class="button" >Маркетинг</button></li>
-            </ul>  
-            <!--Работы-->         
-            <ul class="portfolio list">
-                <li>
-                    <a href="" class="link">
-                        <img src="./images/Technokryak.jpg" alt="Технокряк" width="370" height="294">
-                        <h2 class="title">Технокряк</h2>
-                        <p class="text">Веб-сайт</p>
-                    </a>                    
-                </li>
-                <li>
-                    <a href="" class="link">
-                        <img src="./images/NewOrleanvsGoldenStarPoster.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
-                        <h2 class="title">Постер New Orlean vs Golden Star</h2>
-                        <p class="text">Дизайн</p>
-                    </a>                    
-                </li>
-                <li>
-                    <a href="" class="link">
-                        <img src="./images/SeafoodRestaurant.jpg" alt="Ресторан Seafood" width="370" height="294">
-                        <h2 class="title">Ресторан Seafood</h2>
-                        <p class="text">Приложение</p>
-                    </a>                    
-                </li>
-                <li>
-                    <a href="" class="link">
-                        <img src="./images/PrimeProject.jpg" alt="Проект Prime" width="370" height="294">
-                        <h2 class="title">Проект Prime</h2>
-                        <p class="text">Маркетинг</p>
-                    </a>                    
-                </li>
-                <li>
-                    <a href="" class="link">
-                        <img src="./images/BoxesProject.jpg" alt="Проект Boxes" width="370" height="294">
-                        <h2 class="title">Проект Boxes</h2>
-                        <p class="text">Приложение</p>
-                    </a>                    
-                </li>
-                <li>
-                    <a href="" class="link">
-                        <img src="./images/InspirationHasNoBorders.jpg" alt="Inspiration has no Borders" width="370" height="294">
-                        <h2 class="title">Inspiration has no Borders</h2>
-                        <p class="text">Веб-сайт</p>
-                    </a>                    
-                </li>
-                <li>
-                    <a href="" class="link">
-                        <img src="./images/LimitedEdition.jpg" alt="Издание Limited Edition" width="370" height="294">
-                        <h2 class="title">Издание Limited Edition</h2>
-                        <p class="text">Дизайн</p>
-                    </a>                    
-                </li>
-                <li>
-                    <a href="" class="link">
-                        <img src="./images/LABproject.jpg" alt="Проект LAB" width="370" height="294">
-                        <h2 class="title">Проект LAB</h2>
-                        <p class="text">Маркетинг</p>
-                    </a>                    
-                </li>
-                <li>
-                    <a href="" class="link">
-                        <img src="./images/GrowingBusiness.jpg" alt="Growing Business" width="370" height="294">
-                        <h2 class="title">Growing Business</h2>
-                        <p class="text">Приложение</p>
-                    </a>                    
-                </li>
-            </ul>
+            <div class="container">
+                <h1 class="section-title">Примеры работ</h1>
+                <ul class="filter list">
+                    <li class="item"><button type="button" class="button">Все</button></li>
+                    <li class="item"><button type="button" class="button">Веб-сайты</button></li>
+                    <li class="item"><button type="button" class="button">Приложения</button></li>
+                    <li class="item"><button type="button" class="button">Дизайн</button></li>
+                    <li class="item"><button type="button" class="button">Маркетинг</button></li>
+                </ul>
+                <!--Работы-->
+                <ul class="portfolio list">
+                    <li class="item">
+                        <a href="" class="link">
+                            <img src="./images/Technokryak.jpg" alt="Технокряк" width="370" height="294">
+                            <h2 class="title">Технокряк</h2>
+                            <p class="text">Веб-сайт</p>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="link">
+                            <img src="./images/NewOrleanvsGoldenStarPoster.jpg" alt="Постер New Orlean vs Golden Star" width="370"
+                                height="294">
+                            <h2 class="title">Постер New Orlean vs Golden Star</h2>
+                            <p class="text">Дизайн</p>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="link">
+                            <img src="./images/SeafoodRestaurant.jpg" alt="Ресторан Seafood" width="370" height="294">
+                            <h2 class="title">Ресторан Seafood</h2>
+                            <p class="text">Приложение</p>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="link">
+                            <img src="./images/PrimeProject.jpg" alt="Проект Prime" width="370" height="294">
+                            <h2 class="title">Проект Prime</h2>
+                            <p class="text">Маркетинг</p>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="link">
+                            <img src="./images/BoxesProject.jpg" alt="Проект Boxes" width="370" height="294">
+                            <h2 class="title">Проект Boxes</h2>
+                            <p class="text">Приложение</p>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="link">
+                            <img src="./images/InspirationHasNoBorders.jpg" alt="Inspiration has no Borders" width="370" height="294">
+                            <h2 class="title">Inspiration has no Borders</h2>
+                            <p class="text">Веб-сайт</p>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="link">
+                            <img src="./images/LimitedEdition.jpg" alt="Издание Limited Edition" width="370" height="294">
+                            <h2 class="title">Издание Limited Edition</h2>
+                            <p class="text">Дизайн</p>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="link">
+                            <img src="./images/LABproject.jpg" alt="Проект LAB" width="370" height="294">
+                            <h2 class="title">Проект LAB</h2>
+                            <p class="text">Маркетинг</p>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="link">
+                            <img src="./images/GrowingBusiness.jpg" alt="Growing Business" width="370" height="294">
+                            <h2 class="title">Growing Business</h2>
+                            <p class="text">Приложение</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>            
         </section>
     </main>
     <footer class="footer">
-        <a href="/" class="footer-logo"><span class="logo-accent">Web</span>Studio</a>
-        <address>
-            <ul class="footer-address list">
-                <li><a href="" class="link">г. Киев, пр-т Леси Украинки, 26</a></li>
-                <li><a href="mailto:info@example.com" class="contacts-link">info@example.com</a></li>
-                <li><a href="tel:+380991111111" class="contacts-link">+38 099 111 11 11</a></li>
-            </ul>
-        </address>
+        <div class="container">
+            <a href="/" class="footer-logo"><span class="logo-accent">Web</span>Studio</a>
+            <address>
+                <ul class="footer-address list">
+                    <li><a href="" class="link">г. Киев, пр-т Леси Украинки, 26</a></li>
+                    <li><a href="mailto:info@example.com" class="contacts-link">info@example.com</a></li>
+                    <li><a href="tel:+380991111111" class="contacts-link">+38 099 111 11 11</a></li>
+                </ul>
+            </address>
+        </div>
     </footer>
 </body>
 
