--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
                 <ul class="portfolio list">
                     <li class="item">
                         <a href="" class="link">
-                            <img src="./images/Technokryak.jpg" alt="Технокряк" width="370" height="294">
+                            <img src="./images/technokryak.jpg" alt="Технокряк" width="370" height="294">
                             <h2 class="title">Технокряк</h2>
                             <p class="text">Веб-сайт</p>
                         </a>
