--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,7 @@
                     </li>
                     <li class="item">
                         <a href="" class="link">
-                            <img src="./images/NewOrleanvsGoldenStarPoster.jpg" alt="Постер New Orlean vs Golden Star" width="370"
+                            <img src="./images/neworleanvsgoldenstarposter.jpg" alt="Постер New Orlean vs Golden Star" width="370"
                                 height="294">
                             <h2 class="title">Постер New Orlean vs Golden Star</h2>
                             <p class="text">Дизайн</p>
@@ -61,49 +61,49 @@
                     </li>
                     <li class="item">
                         <a href="" class="link">
-                            <img src="./images/SeafoodRestaurant.jpg" alt="Ресторан Seafood" width="370" height="294">
+                            <img src="./images/seafoodrestaurant.jpg" alt="Ресторан Seafood" width="370" height="294">
                             <h2 class="title">Ресторан Seafood</h2>
                             <p class="text">Приложение</p>
                         </a>
                     </li>
                     <li class="item">
                         <a href="" class="link">
-                            <img src="./images/PrimeProject.jpg" alt="Проект Prime" width="370" height="294">
+                            <img src="./images/primeproject.jpg" alt="Проект Prime" width="370" height="294">
                             <h2 class="title">Проект Prime</h2>
                             <p class="text">Маркетинг</p>
                         </a>
                     </li>
                     <li class="item">
                         <a href="" class="link">
-                            <img src="./images/BoxesProject.jpg" alt="Проект Boxes" width="370" height="294">
+                            <img src="./images/boxesproject.jpg" alt="Проект Boxes" width="370" height="294">
                             <h2 class="title">Проект Boxes</h2>
                             <p class="text">Приложение</p>
                         </a>
                     </li>
                     <li class="item">
                         <a href="" class="link">
-                            <img src="./images/InspirationHasNoBorders.jpg" alt="Inspiration has no Borders" width="370" height="294">
+                            <img src="./images/inspirationhasnoborders.jpg" alt="Inspiration has no Borders" width="370" height="294">
                             <h2 class="title">Inspiration has no Borders</h2>
                             <p class="text">Веб-сайт</p>
                         </a>
                     </li>
                     <li class="item">
                         <a href="" class="link">
-                            <img src="./images/LimitedEdition.jpg" alt="Издание Limited Edition" width="370" height="294">
+                            <img src="./images/limitededition.jpg" alt="Издание Limited Edition" width="370" height="294">
                             <h2 class="title">Издание Limited Edition</h2>
                             <p class="text">Дизайн</p>
                         </a>
                     </li>
                     <li class="item">
                         <a href="" class="link">
-                            <img src="./images/LABproject.jpg" alt="Проект LAB" width="370" height="294">
+                            <img src="./images/labproject.jpg" alt="Проект LAB" width="370" height="294">
                             <h2 class="title">Проект LAB</h2>
                             <p class="text">Маркетинг</p>
                         </a>
                     </li>
                     <li class="item">
                         <a href="" class="link">
-                            <img src="./images/GrowingBusiness.jpg" alt="Growing Business" width="370" height="294">
+                            <img src="./images/growingbusiness.jpg" alt="Growing Business" width="370" height="294">
                             <h2 class="title">Growing Business</h2>
                             <p class="text">Приложение</p>
                         </a>
