--- a/portfolio.html
+++ b/portfolio.html
@@ -46,66 +46,84 @@
                 <ul class="portfolio list">
                     <li class="item">
                         <a href="" class="link">
-                            <img src="./images/technokryak.jpg" alt="Технокряк" width="370" height="294">
-                            <h2 class="title">Технокряк</h2>
-                            <p class="text">Веб-сайт</p>
+                            <img class="card-img" src="./images/technokryak.jpg" alt="Технокряк" width="370" height="294">
+                            <div class="card-border">
+                                <h2 class="title">Технокряк</h2>
+                                <p class="text">Веб-сайт</p>
+                            </div>
                         </a>
                     </li>
                     <li class="item">
                         <a href="" class="link">
-                            <img src="./images/neworleanvsgoldenstarposter.jpg" alt="Постер New Orlean vs Golden Star" width="370"
+                            <img class="card-img" src="./images/neworleanvsgoldenstarposter.jpg" alt="Постер New Orlean vs Golden Star" width="370"
                                 height="294">
-                            <h2 class="title">Постер New Orlean vs Golden Star</h2>
-                            <p class="text">Дизайн</p>
+                            <div class="card-border">
+                                <h2 class="title">Постер New Orlean vs Golden Star</h2>
+                                <p class="text">Дизайн</p>
+                            </div>
                         </a>
                     </li>
                     <li class="item">
                         <a href="" class="link">
-                            <img src="./images/seafoodrestaurant.jpg" alt="Ресторан Seafood" width="370" height="294">
-                            <h2 class="title">Ресторан Seafood</h2>
-                            <p class="text">Приложение</p>
+                            <img class="card-img" src="./images/seafoodrestaurant.jpg" alt="Ресторан Seafood" width="370" height="294">
+                            <div class="card-border">
+                                <h2 class="title">Ресторан Seafood</h2>
+                                <p class="text">Приложение</p>
+                            </div>
                         </a>
                     </li>
                     <li class="item">
                         <a href="" class="link">
-                            <img src="./images/primeproject.jpg" alt="Проект Prime" width="370" height="294">
-                            <h2 class="title">Проект Prime</h2>
-                            <p class="text">Маркетинг</p>
+                            <img class="card-img" src="./images/primeproject.jpg" alt="Проект Prime" width="370" height="294">
+                            <div class="card-border">
+                                <h2 class="title">Проект Prime</h2>
+                                <p class="text">Маркетинг</p>
+                            </div>
                         </a>
                     </li>
                     <li class="item">
                         <a href="" class="link">
-                            <img src="./images/boxesproject.jpg" alt="Проект Boxes" width="370" height="294">
-                            <h2 class="title">Проект Boxes</h2>
-                            <p class="text">Приложение</p>
+                            <img class="card-img" src="./images/boxesproject.jpg" alt="Проект Boxes" width="370" height="294">
+                            <div class="card-border">
+                                <h2 class="title">Проект Boxes</h2>
+                                <p class="text">Приложение</p>
+                            </div>
                         </a>
                     </li>
                     <li class="item">
                         <a href="" class="link">
-                            <img src="./images/inspirationhasnoborders.jpg" alt="Inspiration has no Borders" width="370" height="294">
-                            <h2 class="title">Inspiration has no Borders</h2>
-                            <p class="text">Веб-сайт</p>
+                            <img class="card-img" src="./images/inspirationhasnoborders.jpg" alt="Inspiration has no Borders" width="370" height="294">
+                            <div class="card-border">
+                                <h2 class="title">Inspiration has no Borders</h2>
+                                <p class="text">Веб-сайт</p>
+                            </div>
                         </a>
                     </li>
                     <li class="item">
                         <a href="" class="link">
-                            <img src="./images/limitededition.jpg" alt="Издание Limited Edition" width="370" height="294">
-                            <h2 class="title">Издание Limited Edition</h2>
-                            <p class="text">Дизайн</p>
+                            <img class="card-img" src="./images/limitededition.jpg" alt="Издание Limited Edition" width="370" height="294">
+                            <div class="card-border">
+                                <h2 class="title">Издание Limited Edition</h2>
+                                <p class="text">Дизайн</p>
+                            </div>
                         </a>
                     </li>
                     <li class="item">
                         <a href="" class="link">
-                            <img src="./images/labproject.jpg" alt="Проект LAB" width="370" height="294">
-                            <h2 class="title">Проект LAB</h2>
-                            <p class="text">Маркетинг</p>
+                            <img class="card-img" src="./images/labproject.jpg" alt="Проект LAB" width="370" height="294">
+                            <div class="card-border">
+                                <h2 class="title">Проект LAB</h2>
+                                <p class="text">Маркетинг</p>
+                            </div>
                         </a>
                     </li>
                     <li class="item">
                         <a href="" class="link">
-                            <img src="./images/growingbusiness.jpg" alt="Growing Business" width="370" height="294">
-                            <h2 class="title">Growing Business</h2>
-                            <p class="text">Приложение</p>
+                            <img class="card-img" src="./images/growingbusiness.jpg" alt="Growing Business" width="370" height="294">
+                            <div class="card-border">
+                                <h2 class="title">Growing Business</h2>
+                                <p class="text">Приложение</p>
+                            </div>
                         </a>
                     </li>
                 </ul>
