--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <!--Шапка-->
-    <header>
+    <header class="header">
         <div class="container header-container">
             <nav class="nav-flex" >
             <a href="/" class="logo "><span class="logo-accent">Web</span>Studio</a>
@@ -80,23 +80,31 @@
                 <ul class="team list">
                     <li class="item">
                         <img class="image" src="./images/productdesigner.jpg" alt="Игорь Демьяненко" width="270" height="260">
-                        <h3 class="team-title">Игорь Демьяненко</h3>
-                        <p class="text">Product Designer</p>
+                        <div class="team-description">
+                            <h3 class="team-title">Игорь Демьяненко</h3>
+                            <p class="text">Product Designer</p>
+                        </div>                        
                     </li>
                     <li class="item">
                         <img class="image" src="./images/frontenddeveloper.jpg" alt="Ольга Репина" width="270" height="260">
-                        <h3 class="team-title">Ольга Репина</h3>
-                        <p class="text">Frontend Developer</p>
+                        <div class="team-description">
+                            <h3 class="team-title">Ольга Репина</h3>
+                            <p class="text">Frontend Developer</p>
+                        </div>                        
                     </li>
                     <li class="item">
                         <img class="image" src="./images/marketing.jpg" alt="Николай Тарасов" width="270" height="260">
-                        <h3 class="team-title">Николай Тарасов</h3>
-                        <p class="text">Marketing</p>
+                        <div class="team-description">
+                            <h3 class="team-title">Николай Тарасов</h3>
+                            <p class="text">Marketing</p>
+                        </div>                        
                     </li>
                     <li class="item">
                         <img class="image" src="./images/uidesigner.jpg" alt="Михаил Ермаков" width="270" height="260">
-                        <h3 class="team-title">Михаил Ермаков</h3>
-                        <p class="text">UI Designer</p>
+                        <div class="team-description">
+                            <h3 class="team-title">Михаил Ермаков</h3>
+                            <p class="text">UI Designer</p>
+                        </div>                        
                     </li>
                 </ul>
             </div>            
