--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
 
 <body>
     <!--Шапка-->
-    <header>
+    <header class="header">
         <div class="container header-container">  
             <nav class="nav-flex">
                 <a href="/" class="logo"><span class="logo-accent">Web</span>Studio</a>
